# embedded

./: .gitignore  CMakeLists.txt  README.md  start.sh  start_nosleep_drive.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature.yml
eye_closed_detection/: detectBlink.ipynb  detectBlink.py
include/: AccelerationSensor.h  Camera.h  DBThread.h  DBThreadMonitoring.h  Device.h  EyeClosureQueueManagement.h  EyeDetectionLib.h  FirmwareManager.h  SleepinessDetector.h  Speaker.h  Utils.h  VideoEncoder.h
processing/: removeLight.ipynb  removeLight.py
python/: adxl345_helper.py  eye_detection_lib.py
src/: AccelerationSensor.cpp  Camera.cpp  DBThread.cpp  DBThreadMonitoring.cpp  Device.cpp  EyeClosureQueueManagement.cpp  EyeDetectionLib.cpp  FirmwareManager.cpp  SleepinessDetector.cpp  Speaker.cpp  Utils.cpp  VideoEncoder.cpp  main.cpp  test.cpp
test/: AcceleraterTest.cpp  CameraTest.cpp  SendStatusTest.cpp  SpeakerTest.cpp  UtilsTest.cpp  test.cpp
